--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-django>=5.2,<6.0
-gunicorn==23.0.0
-whitenoise==6.8.2
+asgiref==3.11.1
 dj-database-url==2.3.0
+Django==5.2.11
+gunicorn==23.0.0
+packaging==26.0
+pillow==12.1.0
 psycopg2-binary==2.9.10
+sqlparse==0.5.5
+typing_extensions==4.15.0
+whitenoise==6.8.2
